@@ -57,7 +57,7 @@
     <h3>SYNOPSIS</h3>
     <b>myproxy-destroy</b> [{-h, -u} | {--help, --usage}] [-l | --username <i>username</i>] [-s | --pshost <i>proxy server hostname</i>] [-p | --psport <i>proxy server port #</i>]
     <h3>DESCRIPTION</h3>
-      <b>myproxy-destroy</b> removes any delegated proxy certificate from the myproxy-server generated using <b>myproxy-init</b>. The user must enter the pass-phrase that was used during the <b>myproxy-init</b>.
+      <b>myproxy-destroy</b> removes any delegated proxy certificate from the myproxy-server generated using <b>myproxy-init</b>. The user must have a valid proxy certificate as generated by <b>grid-proxy-init</b> available for <b>myproxy-destroy</b> to use for authentication.
   <h3>OPTIONS</h3>
   <dl>
   <dt>-h | --help<br>
@@ -130,7 +130,7 @@
     <address><a href="mailto:novotny@nlanr.net">Jason Novotny</a></address>
 <!-- Created: Thu Mar 30 12:48:05 PST 2000 -->
 <!-- hhmts start -->
-Last modified: Sat Apr  1 02:42:33 PST 2000
+Last modified: Wed Oct 11 09:26:00 CDT 2000
 <!-- hhmts end -->
   </body>
 </html>
